# ComfyUI-Smart-Metadata-Reader

./: CHANGELOG.md  README.md  README_EN.md  __init__.py  nodes.py  pyproject.toml
docs/: implementation_plan.md  spec.md
smart_metadata_reader/: __init__.py  a1111_parser.py  civitai_parser.py  graph.py  image_io.py  lora_extractor.py  metadata_reader.py  models.py  prompt_merge.py  resolver.py  sampler_selector.py  settings_formatter.py  trace.py
smart_metadata_reader/adapters/: __init__.py  base.py  clip_text.py  conditioning.py  loaders.py  pysssss.py  samplers.py  smart_reader.py  text_sources.py
tests/: test_conditioning_resolver.py  test_graph.py  test_image_io.py  test_lora_extractor.py  test_metadata_reader.py  test_node_contract.py  test_node_id_independence.py  test_sampler_selector.py  test_text_adapters.py
